some code cleanup and documentation

--- a/AlanDuongCom/Data/alanduongcom.html
+++ b/AlanDuongCom/Data/alanduongcom.html
@@ -11,6 +11,8 @@
 
 			<p>I mostly just prefer the workflow. I can do all my work in Visual Studio then just hit the run button and my site pops out within a second.</p>
 
+			<p>View this on <a href="https://github.com/Awcmon/AlanDuongCom">GitHub</a></p>
+
 		</div>
 	</div>
 </div> 
