navbar moved to top

--- a/AlanDuongCom/Data/alanduongcom.html
+++ b/AlanDuongCom/Data/alanduongcom.html
@@ -1,15 +1,12 @@
 ﻿<div class="container">
-	<div style="position: absolute; overflow: hidden; z-index: 0; pointer-events: none; inset: 0px; filter: blur(3px) brightness(70%);opacity:1;background-color:darkslategrey;">
-	</div>
-
-	<div class="row" style="opacity:1;color:white;padding-top:100px">
+	<div class="row" style="opacity:1;color:white;padding-top:50px">
 		<div class="col-lg-12">
 			<h1>alanduong.com</h1>
-			<p>This site was created with a sort of static site generator I wrote in C#.</p>
+			<p>This site was created with a static site generator I wrote in C#.</p>
 
-			<p>There's a billion static site generators out there but I ended up writing my own because I wanted something simple. I can write this website like I would with plain HTML and CSS, except the especially tedious parts are automated.</p>
+			<p>There's a billion static site generators out there but I ended up writing my own because I wanted something simple. I can write this website like I would with plain HTML and CSS, except the especially tedious parts are automated. In its current state, this is definitely tailored towards this website and that will not be changing because I doubt anybody else would want to use this.</p>
 
-			<p>I mostly just prefer the workflow. I can do all my work in Visual Studio then just hit the run button and my site pops out within a second.</p>
+			<p>I mostly just prefer the workflow. I can do all my work in Visual Studio then just hit the run button and my site pops out in a second.</p>
 
 			<p>View this on <a href="https://github.com/Awcmon/AlanDuongCom">GitHub</a></p>
 
