--- a/AlanDuongCom/Data/dropUp.html
+++ b/AlanDuongCom/Data/dropUp.html
@@ -1,4 +1,4 @@
-﻿<li class="nav-item dropup">
+﻿<li class="nav-item dropdown">
 	<a class="nav-link dropdown-toggle" href="$HREF$" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">$TITLE$</a>
 	<div class="dropdown-menu" aria-labelledby="dropdown01">
 		$CHILDREN$
