--- a/AlanDuongCom/Data/supercruise.html
+++ b/AlanDuongCom/Data/supercruise.html
@@ -1,8 +1,5 @@
 ﻿<div class="container">
-	<div style="position: absolute; overflow: hidden; z-index: 0; pointer-events: none; inset: 0px; filter: blur(3px) brightness(70%);opacity:1;background-color:darkslategrey;">
-	</div>
-
-	<div class="row" style="opacity:1;color:white;padding-top:100px">
+	<div class="row" style="opacity:1;color:white;">
 		<div class="col-sm-6">
 			<h1>SUPERCRUISE</h1>
 			<p>Fairly simple shoot 'em up game. </p>
@@ -12,7 +9,7 @@
 			<p>Written in C++ using OpenFrameworks.</p>
 		</div>
 		<div class="col-sm-6">
-			<iframe width="800" height="600" src="https://www.youtube.com/embed/qTNdNdwlAzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="600" height="450" src="https://www.youtube.com/embed/qTNdNdwlAzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<p>The video is in 60 fps, but it looks like Youtube doesn't like playing 60 fps in embedded videos.</p>
 		</div>
 	</div>
