--- a/AlanDuongCom/Data/nav.html
+++ b/AlanDuongCom/Data/nav.html
@@ -1,4 +1,4 @@
-﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+﻿<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 	<div class="container">
 		<a class="navbar-brand" href="#">Alan Duong</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
