replace placeholder video with my own

--- a/AlanDuongCom/Data/index.html
+++ b/AlanDuongCom/Data/index.html
@@ -1,7 +1,7 @@
 ﻿
 <div class="container">
 	<div style="position: absolute; overflow: hidden; z-index: 0; pointer-events: none; mask-image: -webkit-linear-gradient(white 20%, transparent 99%); inset: 0px; filter: blur(3px) brightness(70%);" class="background-media-container">
-		<video style="position: absolute; height: auto; width: auto; min-width: 100%; min-height: 100%; max-width: 10000%; max-height: 10000%; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;" loop="" autoplay="" src="https://files.facepunch.com/s/ec9529e563c5.mp4"></video>
+		<video style="position: absolute; height: auto; width: auto; min-width: 100%; min-height: 100%; max-width: 10000%; max-height: 10000%; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;" loop="" autoplay="" src="content/bg.mp4"></video>
 	</div>
 
 	<div class="row">
