responsive scaling for supercruise video

--- a/AlanDuongCom/Data/supercruise.html
+++ b/AlanDuongCom/Data/supercruise.html
@@ -9,8 +9,9 @@
 			<p>Written in C++ using OpenFrameworks.</p>
 		</div>
 		<div class="col-sm-6">
-			<iframe width="600" height="450" src="https://www.youtube.com/embed/qTNdNdwlAzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<div class="embed-responsive embed-responsive-4by3">
+				<iframe width="600" height="450" src="https://www.youtube.com/embed/qTNdNdwlAzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 			<p>The video is in 60 fps, but it looks like Youtube doesn't like playing 60 fps in embedded videos.</p>
 		</div>
-	</div>
 </div> 
