get video working in chrome hopefully

--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
 	<main role="main" class="container">
 		
 <div class="container">
-	<div style="position: absolute; overflow: hidden; z-index: 0; pointer-events: none; mask-image: -webkit-linear-gradient(white 20%, transparent 99%); inset: 0px; filter: blur(3px) brightness(70%);" class="background-media-container">
-		<video style="position: absolute; height: auto; width: auto; min-width: 100%; min-height: 100%; max-width: 10000%; max-height: 10000%; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;" loop="" autoplay="" src="content/bg.mp4"></video>
-	</div>
+	<!--<div style="position: absolute; overflow: hidden; z-index: 0; pointer-events: none; mask-image: -webkit-linear-gradient(white 20%, transparent 99%); inset: 0px; filter: blur(3px) brightness(70%);" class="background-media-container">
+		<video style="position: absolute; height: auto; width: auto; min-width: 100%; min-height: 100%; max-width: 10000%; max-height: 10000%; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;" loop="" autoplay="" src=""></video>
+	</div>-->
+
+	<div class="background-media-container" style="position: absolute; overflow: hidden; z-index: 0; pointer-events: none; -webkit-mask-image: -webkit-linear-gradient(top, white 20%, transparent 99%); top: -6px; right: -6px; bottom: -6px; left: -6px; filter: blur(3px) brightness(70%);"><video loop="" autoplay="" src="content/bg.mp4" style="position: absolute; height: auto; width: auto; min-width: 100%; min-height: 100%; max-width: 10000%; max-height: 10000%; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;"></video></div>
 
 	<div class="row">
 		<div class="col-lg-12 text-center">
