--- a/twotoner.html
+++ b/twotoner.html
@@ -28,9 +28,12 @@
 				font-size: 3.5rem;
 			}
 		}
+
+		/* Show it is fixed to the top */
+		body {
+			padding-top: 4.5rem;
+		}
 	</style>
-	<!-- Custom styles for this template -->
-	<link href="https://getbootstrap.com/docs/4.3/examples/navbar-fixed/navbar-top-fixed.css" rel="stylesheet">
 
 </head>
 
