--- a/alanduong-com.html
+++ b/alanduong-com.html
@@ -81,7 +81,7 @@
 	<!-- Page Content -->
 	<main role="main" class="container">
 		<div class="container">
-	<div class="row" style="opacity:1;color:white;padding-top:50px">
+	<div class="row" style="opacity:1;color:white;">
 		<div class="col-lg-12">
 			<h1>alanduong.com</h1>
 			<p>This site was created with a static site generator I wrote in C#.</p>
@@ -90,7 +90,7 @@
 
 			<p>I mostly just prefer the workflow. I can do all my work in Visual Studio then just hit the run button and my site pops out in a second.</p>
 
-			<p>View this on <a href="https://github.com/Awcmon/AlanDuongCom">GitHub</a></p>
+			<p>View this on <a href="https://github.com/Awcmon/Awcmon.github.io">GitHub</a></p>
 
 		</div>
 	</div>
