--- a/AlanDuongCom/Data/alanduongcom.html
+++ b/AlanDuongCom/Data/alanduongcom.html
@@ -1,5 +1,5 @@
 ﻿<div class="container">
-	<div class="row" style="opacity:1;color:white;padding-top:50px">
+	<div class="row" style="opacity:1;color:white;">
 		<div class="col-lg-12">
 			<h1>alanduong.com</h1>
 			<p>This site was created with a static site generator I wrote in C#.</p>
@@ -8,7 +8,7 @@
 
 			<p>I mostly just prefer the workflow. I can do all my work in Visual Studio then just hit the run button and my site pops out in a second.</p>
 
-			<p>View this on <a href="https://github.com/Awcmon/AlanDuongCom">GitHub</a></p>
+			<p>View this on <a href="https://github.com/Awcmon/Awcmon.github.io">GitHub</a></p>
 
 		</div>
 	</div>
