--- a/AlanDuongCom/Data/supercruise.html
+++ b/AlanDuongCom/Data/supercruise.html
@@ -1,5 +1,5 @@
 ﻿<div class="container">
-	<div class="row" style="opacity:1;color:white;">
+	<div class="row">
 		<div class="col-sm-6">
 			<h1>SUPERCRUISE</h1>
 			<p>Fairly simple shoot 'em up game. </p>
