--- a/AlanDuongCom/Data/alanduongcom.html
+++ b/AlanDuongCom/Data/alanduongcom.html
@@ -1,5 +1,5 @@
 ﻿<div class="container">
-	<div class="row" style="opacity:1;color:white;">
+	<div class="row"">
 		<div class="col-lg-12">
 			<h1>alanduong.com</h1>
 			<p>This site was created with a static site generator I wrote in C#.</p>
