--- a/AlanDuongCom/Data/basic.html
+++ b/AlanDuongCom/Data/basic.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body style="background-color:darkslategrey;">
+<body style="background-color:#262626;color:#BFBFBF">
 
 	<!-- Navigation -->
 	$NAV$
