--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body style="background-color:darkslategrey;">
+<body style="background-color:#262626;color:#BFBFBF">
 
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -85,9 +85,6 @@
 	<main role="main" class="container">
 		
 <div class="container">
-	<div style="position: absolute; overflow: hidden; z-index: 0; pointer-events: none; mask-image: -webkit-linear-gradient(white 20%, transparent 150%); inset: 0px; filter: blur(3px) brightness(70%);opacity:1;background-color:darkslategrey;" >
-	</div>
-
 	<div class="row">
 		<div class="col-lg-12 text-center">
 			<div style="opacity:1;color:white">
