--- a/supercruise.html
+++ b/supercruise.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body style="background-color:darkslategrey;">
+<body style="background-color:#262626;color:#BFBFBF">
 
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -81,7 +81,7 @@
 	<!-- Page Content -->
 	<main role="main" class="container">
 		<div class="container">
-	<div class="row" style="opacity:1;color:white;">
+	<div class="row">
 		<div class="col-sm-6">
 			<h1>SUPERCRUISE</h1>
 			<p>Fairly simple shoot 'em up game. </p>
