--- a/mil-moa-calculator.html
+++ b/mil-moa-calculator.html
@@ -84,7 +84,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-lg-12 text-center">
-			<div style="opacity:1;color:white">
+			<div>
 				<h1 class="mt-5">Work In Progress</h1>
 				<p class="lead">Check back later.</p>
 			</div>
