--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 	<div class="row">
 		<div class="col-lg-12 text-center">
-			<div style="opacity:1;color:white">
+			<div>
 				<h1 class="mt-5">I'm Alan Duong</h1>
 				<p class="lead">I program things.</p>
 				<ul class="list-unstyled">
