--- a/mil-moa-calculator.html
+++ b/mil-moa-calculator.html
@@ -80,14 +80,19 @@
 
 	<!-- Page Content -->
 	<main role="main" class="container">
-		
-<div class="container">
+		<div class="container">
 	<div class="row">
 		<div class="col-lg-12 text-center">
-			<div>
-				<h1 class="mt-5">Work In Progress</h1>
-				<p class="lead">Check back later.</p>
-			</div>
+			<h1>MIL/MOA Tools</h1>
+			<p class="lead">MIL to MOA conversion</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-6 text-center">
+			MIL: <input type="text" id="fMil">
+		</div>
+		<div class="col-sm-6 text-center">
+			MOA: <input type="text" id="fMoa">
 		</div>
 	</div>
 </div>
