--- a/AlanDuongCom/Data/basic.html
+++ b/AlanDuongCom/Data/basic.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>$TITLE$</title>
+	<title>#TITLE#</title>
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -40,11 +40,11 @@
 <body style="background-color:#262626;color:#BFBFBF">
 
 	<!-- Navigation -->
-	$NAV$
+	#NAV#
 
 	<!-- Page Content -->
 	<main role="main" class="container">
-		$CONTENT$
+		#CONTENT#
 	</main>
 
 	<!-- Bootstrap core JavaScript -->
