--- a/AlanDuongCom/Data/nav.html
+++ b/AlanDuongCom/Data/nav.html
@@ -6,7 +6,7 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
-				$CHILDREN$
+				#CHILDREN#
 			</ul>
 		</div>
 	</div>
