support for scripts + simple mil/moa calculator

--- a/AlanDuongCom/Data/calculatorMilMoa.html
+++ b/AlanDuongCom/Data/calculatorMilMoa.html
@@ -3,11 +3,12 @@
 		<div class="col-lg-12 text-center">
 			<h1>MIL/MOA Tools</h1>
 			<p class="lead">MIL to MOA conversion</p>
+			<p>Round to <input type="text" id="fDecimals" value="1"> decimals</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm-6 text-center">
-			MIL: <input type="text" id="fMil">
+			MIL: <input type="text" id="fMil" value="1">
 		</div>
 		<div class="col-sm-6 text-center">
 			MOA: <input type="text" id="fMoa">
