--- a/mil-moa-calculator.html
+++ b/mil-moa-calculator.html
@@ -35,7 +35,7 @@
 		}
 	</style>
 
-	<script src="js/calcMilMoa.js"></script>
+	<script src="js/convertMilMoa.js"></script>
 
 </head>
 
@@ -85,17 +85,95 @@
 		<div class="container">
 	<div class="row">
 		<div class="col-lg-12 text-center">
-			<h1>MIL/MOA Tools</h1>
-			<p class="lead">MIL to MOA conversion</p>
+			<h1>MIL/MOA Conversion</h1>
+			<p>Update one of the fields and the others will update.</p>
+			<p>Calculated using 3.4377468 MOA per MIL.</p>
 			<p>Round to <input type="text" id="fDecimals" value="1"> decimals</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm-6 text-center">
-			MIL: <input type="text" id="fMil" value="1">
+			<!--MIL: <input type="text" id="fMil" value="1">-->
+			<div class="form-group">
+				<label for="fMil">MIL:</label>
+				<input type="text" class="form-control" id="fMil" value="1">
+			</div>
 		</div>
 		<div class="col-sm-6 text-center">
-			MOA: <input type="text" id="fMoa">
+			<div class="form-group">
+				<label for="fMoa">MOA:</label>
+				<input type="text" class="form-control" id="fMoa">
+			</div>
+		</div>
+	</div>
+	<div class="mt-5 row">
+		<div class="col-lg-12 text-center">
+			<h1>Height/Angle/Distance Calculator</h1>
+			<h3>Presets:</h3>
+			<button type="button" class="btn btn-secondary">Metric</button>
+			<button type="button" class="btn btn-secondary">Imperial</button>
+			<h3>Solve for:</h3>
+			<div class="btn-group btn-group-toggle" data-toggle="buttons">
+				<label class="btn btn-secondary active">
+					<input type="radio" name="solveFor" id="distance" autocomplete="off" checked> Distance
+				</label>
+				<label class="btn btn-secondary">
+					<input type="radio" name="solveFor" id="angle" autocomplete="off"> Angle
+				</label>
+				<label class="btn btn-secondary">
+					<input type="radio" name="solveFor" id="height" autocomplete="off"> Height
+				</label>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-4 text-center">
+			<div class="form-group">
+				<label for="fDistance">Distance:</label>
+				<input type="text" class="form-control" id="fDistance">
+
+				<label for="selDistanceUnit">Unit:</label>
+				<select class="form-control" id="selDistanceUnit">
+					<option>mm</option>
+					<option>cm</option>
+					<option selected="selected">m</option>
+					<option>km</option>
+					<option>in</option>
+					<option>ft</option>
+					<option>yd</option>
+					<option>mi</option>
+				</select>
+			</div>
+		</div>
+		<div class="col-sm-4 text-center">
+			<div class="form-group">
+				<label for="fAngle">Angle:</label>
+				<input type="text" class="form-control" id="fAngle">
+
+				<label for="selAngleUnit">Unit:</label>
+				<select class="form-control" id="selAngleUnit">
+					<option selected="selected">MIL</option>
+					<option>MOA</option>
+				</select>
+			</div>
+		</div>
+		<div class="col-sm-4 text-center">
+			<div class="form-group">
+				<label for="fHeight">Height:</label>
+				<input type="text" class="form-control" id="fHeight">
+
+				<label for="selHeightUnit">Unit:</label>
+				<select class="form-control" id="selHeightUnit">
+					<option>mm</option>
+					<option>cm</option>
+					<option selected="selected">m</option>
+					<option>km</option>
+					<option>in</option>
+					<option>ft</option>
+					<option>yd</option>
+					<option>mi</option>
+				</select>
+			</div>
 		</div>
 	</div>
 </div>
