--- a/AlanDuongCom/Data/calculatorMilMoa.html
+++ b/AlanDuongCom/Data/calculatorMilMoa.html
@@ -47,7 +47,7 @@
 			<div class="form-group">
 				<label for="fDistance">Distance:</label>
 				<div class="input-group">
-					<input type="text" class="form-control" id="fDistance">
+					<input type="number" class="form-control" id="fDistance">
 					<span class="input-group-addon">
 						<select class="form-control" id="selDistanceUnit">
 							<option>mm</option>
@@ -68,7 +68,7 @@
 			<div class="form-group">
 				<label for="fAngle">Angle:</label>
 				<div class="input-group">
-					<input type="text" class="form-control" id="fAngle">
+					<input type="number" class="form-control" id="fAngle" step="0.1">
 					<span class="input-group-addon">
 						<select class="form-control" id="selAngleUnit">
 							<option selected="selected">MIL</option>
@@ -82,7 +82,7 @@
 			<div class="form-group">
 				<label for="fHeight">Height:</label>
 				<div class="input-group">
-					<input type="text" class="form-control" id="fHeight">
+					<input type="number" class="form-control" id="fHeight">
 					<span class="input-group-addon">
 						<select class="form-control" id="selHeightUnit">
 							<option>mm</option>
