--- a/AlanDuongCom/Data/calculatorMilMoa.html
+++ b/AlanDuongCom/Data/calculatorMilMoa.html
@@ -4,7 +4,21 @@
 			<h1>MIL/MOA Conversion</h1>
 			<p>Update one of the fields and the others will update.</p>
 			<p>Calculated using 3.4377468 MOA per MIL.</p>
-			<p>Round to <input type="number" id="fDecimals" value="1"> decimals</p>
+			<!--<p>Round to <input type="number" id="fDecimals" value="1"> decimals</p>-->
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4 text-center">
+
+		</div>
+		<div class="col-md-4 text-center">
+			<div class="form-group">
+				<label for="fDecimals">Decimals to round to:</label>
+				<input type="number" class="form-control" id="fDecimals" value="1">
+			</div>
+		</div>
+		<div class="col-md-4 text-center">
+
 		</div>
 	</div>
 	<div class="row">
@@ -24,7 +38,7 @@
 	</div>
 	<div class="mt-5 row">
 		<div class="col-lg-12 text-center">
-			<h1>Height/Angle/Distance Calculator</h1>
+			<h1>Ranging Calculator</h1>
 			<h3>Presets:</h3>
 			<button type="button" class="btn btn-secondary" id="btnMetric">Metric</button>
 			<button type="button" class="btn btn-secondary" id="btnImperial">Imperial</button>
@@ -43,7 +57,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-sm-4 text-center">
+		<div class="col-md-4 text-center">
 			<div class="form-group">
 				<label for="fDistance">Distance:</label>
 				<div class="input-group">
@@ -61,10 +75,10 @@
 						</select>
 					</span>
 				</div>
-				
+
 			</div>
 		</div>
-		<div class="col-sm-4 text-center">
+		<div class="col-md-4 text-center">
 			<div class="form-group">
 				<label for="fAngle">Angle:</label>
 				<div class="input-group">
@@ -78,7 +92,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-4 text-center">
+		<div class="col-md-4 text-center">
 			<div class="form-group">
 				<label for="fHeight">Height:</label>
 				<div class="input-group">
