--- a/alanduong-com.html
+++ b/alanduong-com.html
@@ -29,6 +29,10 @@
 			}
 		}
 
+		input[type="number"]:disabled {
+			background: #BFBFBF;
+		}
+
 		/* Show it is fixed to the top */
 		body {
 			padding-top: 4.5rem;
