select fields on enter and disable number field color change

--- a/AlanDuongCom/Data/basic.html
+++ b/AlanDuongCom/Data/basic.html
@@ -30,7 +30,7 @@
 		}
 
 		input[type="number"]:disabled {
-			background: #BFBFBF;
+			background: #CFAFAF;
 		}
 
 		/* Show it is fixed to the top */
