--- a/twotoner.html
+++ b/twotoner.html
@@ -30,7 +30,7 @@
 		}
 
 		input[type="number"]:disabled {
-			background: #BFBFBF;
+			background: #CFAFAF;
 		}
 
 		/* Show it is fixed to the top */
