--- a/mil-moa-calculator.html
+++ b/mil-moa-calculator.html
@@ -127,7 +127,24 @@
 	<div class="mt-5 row">
 		<div class="col-lg-12 text-center">
 			<h1>Ranging Calculator</h1>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4 text-center">
 
+		</div>
+		<div class="col-md-4 text-center">
+			<div class="form-group">
+				<label for="fDecimals">Decimals to round to:</label>
+				<input type="number" class="form-control" id="fDecimals" value="1">
+			</div>
+		</div>
+		<div class="col-md-4 text-center">
+
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-12 text-center">
 			<label for="presets">Presets:</label>
 			<div id="presets">
 				<button type="button" class="btn btn-secondary" id="btnMetricRanging">Metric Ranging</button>
@@ -151,6 +168,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	<div class="row">
 		<div class="col-md-4 text-center">
 			<div class="form-group">
