better looking and more compact forms

--- a/mil-moa-calculator.html
+++ b/mil-moa-calculator.html
@@ -100,8 +100,10 @@
 
 		</div>
 		<div class="col-md-4 text-center">
-			<div class="form-group">
-				<label for="fDecimals">Decimals to round to:</label>
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text">Number of decimals</span>
+				</div>
 				<input type="number" class="form-control" id="fDecimals" value="1">
 			</div>
 		</div>
@@ -109,17 +111,22 @@
 
 		</div>
 	</div>
+	<br />
 	<div class="row">
 		<div class="col-sm-6 text-center">
 			<!--MIL: <input type="text" id="fMil" value="1">-->
-			<div class="form-group">
-				<label for="fMil">MIL:</label>
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text">MIL</span>
+				</div>
 				<input type="number" class="form-control" id="fMil" step="0.1" value="1">
 			</div>
 		</div>
 		<div class="col-sm-6 text-center">
-			<div class="form-group">
-				<label for="fMoa">MOA:</label>
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text">MOA</span>
+				</div>
 				<input type="number" class="form-control" id="fMoa" step="0.25">
 			</div>
 		</div>
@@ -134,8 +141,10 @@
 
 		</div>
 		<div class="col-md-4 text-center">
-			<div class="form-group">
-				<label for="fDecimals">Decimals to round to:</label>
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text">Number of decimals</span>
+				</div>
 				<input type="number" class="form-control" id="fDecimals" value="1">
 			</div>
 		</div>
