add supercruise and dominocomputer pages

--- a/dominocomputer.html
+++ b/dominocomputer.html
@@ -86,14 +86,24 @@
 
 	<!-- Page Content -->
 	<main role="main" class="container">
-		
-<div class="container">
+		<div class="container">
 	<div class="row">
-		<div class="col-lg-12 text-center">
-			<div>
-				<h1 class="mt-5">Work In Progress</h1>
-				<p class="lead">Check back later.</p>
+		<div class="col-sm-6">
+			<h1>Domino Computer</h1>
+			<p>One time I watched a Computerphile video where they made a binary half adder out of dominos and I thought that was cool.</p>
+
+			<p>However, I did not have any dominos, want to buy any dominos, have the physical space to set up a ton of dominos, or want to spend a lot of time setting up dominos. So I made a program where I could do that sort of thing without any of the downsides.</p>
+
+			<p>The rules for how the program works are inspired from how dominos work and a working binary half adder is demonstrated inside the video on this page.</p>
+
+			<p>Written in C++ using SDL2.</p>
+		</div>
+		<div class="col-sm-6">
+			<div class="embed-responsive embed-responsive-4by3">
+				<iframe width="600" height="450" src="https://www.youtube.com/embed/_cp7-WojClQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
+			<p>The left output is one and the right output is two.</p>
+			<p>Blue = input tile, grey = 'signal went through here' tile, black = 'signal did not go through here' tile. </p>
 		</div>
 	</div>
 </div>
