--- a/mil-moa-calculator.html
+++ b/mil-moa-calculator.html
@@ -158,7 +158,7 @@
 			<div id="presets">
 				<button type="button" class="btn btn-secondary" id="btnMetricRanging">Metric Ranging</button>
 				<button type="button" class="btn btn-secondary" id="btnImperialRanging">Imperial Ranging</button>
-				<button type="button" class="btn btn-secondary" id="btnImperialMilRanging">Imperial Mil Ranging</button>
+				<button type="button" class="btn btn-secondary" id="btnImperialMilRanging">Imperial MIL Ranging</button>
 				<button type="button" class="btn btn-secondary" id="btnImperialGroupMOA">Imperial Group MOA</button>
 			</div>
 
