--- a/twotoner.html
+++ b/twotoner.html
@@ -86,14 +86,15 @@
 
 	<!-- Page Content -->
 	<main role="main" class="container">
-		
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12 text-center">
-			<div>
-				<h1 class="mt-5">Work In Progress</h1>
-				<p class="lead">Check back later.</p>
-			</div>
+		<div class="container">
+	<div class="row" ">
+		<div class="col-lg-12">
+			<h1>TwoToner</h1>
+			<p>This program recolorizes images to two colors, rescales the image to the resolution of the monitor, and applies smoothing to the edges of the image so that there are no sharp edges.</p>
+
+			<p>I use this mostly for my personal desktop wallpapers. Some background images looked nice, but made it difficult to see desktop icons on. Additionally, I like multi-monitor setups and have a rotation of images, so I think it looks nicer if all my desktop backgrounds have a unified color scheme and style. Finally, I like the two-color, high-contrast art style.</p>
+
+
 		</div>
 	</div>
 </div>
