add more details to supercruise and twotoner

--- a/AlanDuongCom/Data/twotoner.html
+++ b/AlanDuongCom/Data/twotoner.html
@@ -6,6 +6,7 @@
 
 			<p>I use this mostly for my personal desktop wallpapers. Some background images looked nice, but made it difficult to see desktop icons on. Additionally, I like multi-monitor setups and have a rotation of images, so I think it looks nicer if all my desktop backgrounds have a unified color scheme and style. Finally, I like the two-color, high-contrast art style.</p>
 
+			<p>Written in C++ using SDL2 and OpenGL.</p>
 
 		</div>
 	</div>
