--- a/supercruise.html
+++ b/supercruise.html
@@ -95,6 +95,10 @@
 			<p>I wanted to make the enemies shoot bullets and missiles and whatnot but then the game became incredibly difficult.</p>
 
 			<p>Written in C++ using OpenFrameworks.</p>
+
+			View this on <a href="https://github.com/Awcmon/SUPERCRUISE">GitHub</a>
+			<br />
+			View this on <a href="https://awcmon.itch.io/supercruise">itch.io</a>
 		</div>
 		<div class="col-sm-6">
 			<div class="embed-responsive embed-responsive-4by3">
