--- a/AlanDuongCom/Data/twotoner.html
+++ b/AlanDuongCom/Data/twotoner.html
@@ -15,6 +15,10 @@
 
 			<br /><br />
 
+			Given the source image:<br />
+			<img src="content/img/pziv.jpg" class="img-fluid" alt="Responsive image">
+			<br /><br />
+
 			Simply recoloring the image results in:<br />
 			<img src="content/img/pziv_unsmoothed.png" class="img-fluid" alt="Responsive image">
 			It is very clear where the image ends, and it looks very ugly.
