added springy sanic page

--- a/AlanDuongCom/Data/supercruise.html
+++ b/AlanDuongCom/Data/supercruise.html
@@ -16,7 +16,7 @@
 			<div class="embed-responsive embed-responsive-4by3">
 				<iframe width="600" height="450" src="https://www.youtube.com/embed/qTNdNdwlAzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
-			<p>The video is in 60 fps, but it looks like Youtube doesn't like playing 60 fps in embedded videos.</p>
+			<p>The video is in 60 fps, but the embed may not play in 60 fps.</p>
 		</div>
 	</div>
 </div>
