--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 		<a class="dropdown-item" href="supercruise.html">SUPERCRUISE</a>
 <a class="dropdown-item" href="twotoner.html">TwoToner</a>
 <a class="dropdown-item" href="dominocomputer.html">DominoComputer</a>
+<a class="dropdown-item" href="springy-sanic.html">Springy Sanic</a>
 <a class="dropdown-item" href="alanduong-com.html">alanduong.com</a>
 
 	</div>
