--- a/springy-sanic.html
+++ b/springy-sanic.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Blog - alanduong.com</title>
+	<title>Springy Sanic - alanduong.com</title>
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -75,11 +75,8 @@
 
 	</div>
 </li>
-<li class="nav-item active">
-	<a class="nav-link" href="blog.html">
-		Blog
-		<span class="sr-only">(current)</span>
-	</a>
+<li class="nav-item">
+	<a class="nav-link" href="blog.html">Blog</a>
 </li>
 
 			</ul>
@@ -90,13 +87,35 @@
 
 	<!-- Page Content -->
 	<main role="main" class="container">
-		
-<div class="container">
+		<div class="container">
 	<div class="row">
-		<div class="col-lg-12 text-center">
-			<div>
-				<h1 class="mt-5">Work In Progress</h1>
-				<p class="lead">Check back later.</p>
+		<div class="col-sm-6">
+			<h1>Springy Sanic</h1>
+			<p>Back in my junior year of high school, my friends and I thought a badly drawn picture of Sonic the Hedgehog, called Sanic, was hilarious.</p>
+
+			<p>I also thought it would be hilarious if said character was actually in a game.</p>
+
+			<p>A weekend came and went. At the end of it, I had created Springy Sanic because I thought it would be funny. The game looks terrible, but it was supposed to look terrible because I thought it would be funny.</p>
+
+			<p>This game was written in C++ using SDL2.</p>
+		</div>
+		<div class="col-sm-6">
+			<div class="embed-responsive embed-responsive-4by3">
+				<iframe width="600" height="450" src="https://www.youtube.com/embed/dVtikJtN8Gw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-6">
+			<p>Some time later, I decided to learn Unity. In my opinion, there is no better way to learn a game engine than to just make a game with it.</p>
+
+			<p>I ended up remaking Springy Sanic because it was a simple game.</p>
+
+			<p>This new version had a less courageous art direction.</p>
+		</div>
+		<div class="col-sm-6">
+			<div class="embed-responsive embed-responsive-4by3">
+				<iframe width="600" height="450" src="https://www.youtube.com/embed/guIF5YdtLoI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
