--- a/supercruise.html
+++ b/supercruise.html
@@ -63,6 +63,7 @@
 		<a class="dropdown-item" href="supercruise.html">SUPERCRUISE</a>
 <a class="dropdown-item" href="twotoner.html">TwoToner</a>
 <a class="dropdown-item" href="dominocomputer.html">DominoComputer</a>
+<a class="dropdown-item" href="springy-sanic.html">Springy Sanic</a>
 <a class="dropdown-item" href="alanduong-com.html">alanduong.com</a>
 
 	</div>
@@ -104,7 +105,7 @@
 			<div class="embed-responsive embed-responsive-4by3">
 				<iframe width="600" height="450" src="https://www.youtube.com/embed/qTNdNdwlAzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
-			<p>The video is in 60 fps, but it looks like Youtube doesn't like playing 60 fps in embedded videos.</p>
+			<p>The video is in 60 fps, but the embed may not play in 60 fps.</p>
 		</div>
 	</div>
 </div>
