--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		-->
 	<div class="background-media-container" style="position: absolute; overflow: hidden; z-index: 0; pointer-events: none; top: 0px; right: 0px; bottom: 0px; left: 0px; filter: blur(1px) brightness(70%);"><video muted loop="" autoplay="" src="content/bg.mp4" style="position: absolute; height: auto; width: auto; min-width: 100%; min-height: 100%; max-width: 10000%; max-height: 10000%; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;"></video></div>
 
-	<div class="row">
+	<div class="row" style="color:#FFFFFF">
 		<div class="col-lg-12 text-center">
 			<div>
 				<h1 class="mt-5">I'm Alan Duong</h1>
