small changes to index and twotoner pages

--- a/AlanDuongCom/Data/twotoner.html
+++ b/AlanDuongCom/Data/twotoner.html
@@ -19,7 +19,7 @@
 			<img src="content/img/pziv.jpg" class="img-fluid" alt="Responsive image">
 			<br /><br />
 
-			Simply recoloring the image results in:<br />
+			Simply recoloring and rescaling (maintaining the aspect ratio) the image to my monitor's resolution (1920x1080) results in:<br />
 			<img src="content/img/pziv_unsmoothed.png" class="img-fluid" alt="Responsive image">
 			It is very clear where the image ends, and it looks very ugly.
 
