very basic display of blogposts

--- a/blog.html
+++ b/blog.html
@@ -90,18 +90,7 @@
 
 	<!-- Page Content -->
 	<main role="main" class="container">
-		
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12 text-center">
-			<div>
-				<h1 class="mt-5">Work In Progress</h1>
-				<p class="lead">Check back later.</p>
-			</div>
-		</div>
-	</div>
-</div>
-
+		<p></p><p>This is a test blog post. </p><p></p><p>https://i.imgur.com/AbvsrJA.png</p><p></p>
 	</main>
 
 	<!-- Bootstrap core JavaScript -->
