--- a/blog.html
+++ b/blog.html
@@ -90,7 +90,33 @@
 
 	<!-- Page Content -->
 	<main role="main" class="container">
-		<p></p><p>This is a test blog post. </p><p></p><p>https://i.imgur.com/AbvsrJA.png</p><p></p>
+		<main role="main" class="container">
+	<div class="row">
+		<div class="col-md-12 blog-main">
+			<h3 class="pb-3 mb-4 font-italic border-bottom">
+				Personal blog mainly about computer-related things.
+			</h3>
+
+			<div class="blog-post">
+	<h2 class="blog-post-title">Test Post</h2>
+	<p class="blog-post-meta">Monday, April 13, 2020</p>
+
+	<p></p><p>This is a test blog post. </p><p></p><p>https://i.imgur.com/AbvsrJA.png</p><p></p>
+
+</div><!-- /.blog-post --><div class="blog-post">
+	<h2 class="blog-post-title">Test Post 2</h2>
+	<p class="blog-post-meta">Monday, April 13, 2020</p>
+
+	<p></p><p>This is another test blog post. </p><p></p><p>Testing.</p>
+
+</div><!-- /.blog-post -->
+
+		</div><!-- /.blog-main -->
+
+	</div><!-- /.row -->
+
+</main><!-- /.container -->
+
 	</main>
 
 	<!-- Bootstrap core JavaScript -->
