--- a/blog.html
+++ b/blog.html
@@ -68,13 +68,6 @@
 
 	</div>
 </li>
-<li class="nav-item dropdown">
-	<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tools</a>
-	<div class="dropdown-menu" aria-labelledby="dropdown01">
-		<a class="dropdown-item" href="mil-moa-calculator.html">MIL/MOA Calculator</a>
-
-	</div>
-</li>
 <li class="nav-item active">
 	<a class="nav-link" href="blog.html">
 		Blog
@@ -91,6 +84,20 @@
 	<!-- Page Content -->
 	<main role="main" class="container">
 		<main role="main" class="container">
+	<div class="row">
+		<div class="col-md-12 blog-main">
+			<h3 class="pb-3 mb-4 font-italic border-bottom">
+				Personal blog mainly about computer-related things.
+			</h3>
+
+			
+
+		</div><!-- /.blog-main -->
+
+	</div><!-- /.row -->
+
+</main><!-- /.container -->
+<main role="main" class="container">
 	<div class="row">
 		<div class="col-md-12 blog-main">
 			<h3 class="pb-3 mb-4 font-italic border-bottom">
