--- a/springy-sanic.html
+++ b/springy-sanic.html
@@ -68,6 +68,13 @@
 
 	</div>
 </li>
+<li class="nav-item dropdown">
+	<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tools</a>
+	<div class="dropdown-menu" aria-labelledby="dropdown01">
+		<a class="dropdown-item" href="mil-moa-calculator.html">MIL/MOA Calculator</a>
+
+	</div>
+</li>
 <li class="nav-item">
 	<a class="nav-link" href="blog.html">Blog</a>
 </li>
