change hr color and add hr to mil/moa calc

--- a/AlanDuongCom/Data/defaultTemplate.html
+++ b/AlanDuongCom/Data/defaultTemplate.html
@@ -37,6 +37,11 @@
 		body {
 			padding-top: 4.5rem;
 		}
+
+		hr {
+			color: #BFBFBF;
+			background-color: #BFBFBF;
+		}
 	</style>
 
 	#SCRIPTS#
