--- a/mil-moa-calculator.html
+++ b/mil-moa-calculator.html
@@ -37,6 +37,11 @@
 		body {
 			padding-top: 4.5rem;
 		}
+
+		hr {
+			color: #BFBFBF;
+			background-color: #BFBFBF;
+		}
 	</style>
 
 	<script src="js/convertMilMoa.js"></script>
@@ -132,6 +137,9 @@
 			</div>
 		</div>
 	</div>
+
+	<hr />
+
 	<div class="mt-5 row">
 		<div class="col-lg-12 text-center">
 			<h1>Ranging Calculator</h1>
