blogcard titles now link to their own page

--- a/AlanDuongCom/Data/blogPostCard.html
+++ b/AlanDuongCom/Data/blogPostCard.html
@@ -1,5 +1,5 @@
 ﻿<div class="blog-post">
-	<h2 class="blog-post-title">#TITLE#</h2>
+	<h2 class="blog-post-title"><a href="#URL#">#TITLE#</a></h2>
 	<p class="blog-post-meta">#DATE#</p>
 
 	#CONTENT#
