--- a/blog.html
+++ b/blog.html
@@ -103,13 +103,13 @@
 			</h3>
 
 			<div class="blog-post">
-	<h2 class="blog-post-title">Test Post</h2>
+	<h2 class="blog-post-title"><a href="test-post.html">Test Post</a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
 	<p></p><p>This is a test blog post. </p><p></p><p>https://i.imgur.com/AbvsrJA.png</p><p></p>
 
 </div><!-- /.blog-post --><div class="blog-post">
-	<h2 class="blog-post-title">Test Post 2</h2>
+	<h2 class="blog-post-title"><a href="test-post-2.html">Test Post 2</a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
 	<p></p><p>This is another test blog post. </p><p></p><p>Testing.</p>
