--- a/test-post.html
+++ b/test-post.html
@@ -93,7 +93,7 @@
 	<!-- Page Content -->
 	<main role="main" class="container">
 		<div class="blog-post">
-	<h2 class="blog-post-title">Test Post</h2>
+	<h2 class="blog-post-title"><a href="test-post.html">Test Post</a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
 	<p></p><p>This is a test blog post. </p><p></p><p>https://i.imgur.com/AbvsrJA.png</p><p></p>
