--- a/test-post-2.html
+++ b/test-post-2.html
@@ -93,7 +93,7 @@
 	<!-- Page Content -->
 	<main role="main" class="container">
 		<div class="blog-post">
-	<h2 class="blog-post-title">Test Post 2</h2>
+	<h2 class="blog-post-title"><a href="test-post-2.html">Test Post 2</a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
 	<p></p><p>This is another test blog post. </p><p></p><p>Testing.</p>
