--- a/AlanDuongCom/Data/defaultTemplate.html
+++ b/AlanDuongCom/Data/defaultTemplate.html
@@ -42,6 +42,20 @@
 			color: #BFBFBF;
 			background-color: #BFBFBF;
 		}
+
+		.blog-post {
+			margin-bottom: 4rem;
+		}
+
+		.blog-post-title {
+			margin-bottom: .25rem;
+			font-size: 2.5rem;
+		}
+
+		.blog-post-meta {
+			margin-bottom: 1.25rem;
+			color: #999;
+		}
 	</style>
 
 	#SCRIPTS#
