--- a/test-post.html
+++ b/test-post.html
@@ -42,6 +42,20 @@
 			color: #BFBFBF;
 			background-color: #BFBFBF;
 		}
+
+		.blog-post {
+			margin-bottom: 4rem;
+		}
+
+		.blog-post-title {
+			margin-bottom: .25rem;
+			font-size: 2.5rem;
+		}
+
+		.blog-post-meta {
+			margin-bottom: 1.25rem;
+			color: #999;
+		}
 	</style>
 
 	
@@ -93,12 +107,13 @@
 	<!-- Page Content -->
 	<main role="main" class="container">
 		<div class="blog-post">
-	<h2 class="blog-post-title"><a href="test-post.html">Test Post</a></h2>
+	<h2 class="blog-post-title"><a href="test-post.html"><font color=#FFFFFF>Test Post</font></a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
 	<p></p><p>This is a test blog post. </p><p></p><p>https://i.imgur.com/AbvsrJA.png</p><p></p>
 
 </div><!-- /.blog-post -->
+
 	</main>
 
 	<!-- Bootstrap core JavaScript -->
