cull useless lines from blogpost markup

--- a/test-post.html
+++ b/test-post.html
@@ -110,7 +110,9 @@
 	<h2 class="blog-post-title"><a href="test-post.html"><font color=#FFFFFF>Test Post</font></a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
-	<p></p><p>This is a test blog post. </p><p></p><p>https://i.imgur.com/AbvsrJA.png</p><p></p>
+	<p>This is a test blog post. </p>
+<p>https://i.imgur.com/AbvsrJA.png</p>
+
 
 </div><!-- /.blog-post -->
 
