--- a/testing-a-long-blog-post.html
+++ b/testing-a-long-blog-post.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Test Post 2 - alanduong.com</title>
+	<title>Testing a Long Blog Post - alanduong.com</title>
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -107,11 +107,62 @@
 	<!-- Page Content -->
 	<main role="main" class="container">
 		<div class="blog-post">
-	<h2 class="blog-post-title"><a href="test-post-2.html"><font color=#FFFFFF>Test Post 2</font></a></h2>
-	<p class="blog-post-meta">Monday, April 13, 2020</p>
+	<h2 class="blog-post-title"><a href="testing-a-long-blog-post.html"><font color=#FFFFFF>Testing a Long Blog Post</font></a></h2>
+	<p class="blog-post-meta">Tuesday, April 14, 2020</p>
 
-	<p>This is another test blog post. </p>
-<p>Testing.</p>
+	<p>Just a long test post to test post truncation on the main blog page.</p>
+<p>If</p>
+<p>posts</p>
+<p>span</p>
+<p>too</p>
+<p>many</p>
+<p>lines</p>
+<p>that</p>
+<p>will</p>
+<p>make</p>
+<p>the</p>
+<p>main</p>
+<p>blog</p>
+<p>page</p>
+<p>very</p>
+<p>cluttered</p>
+<p>and</p>
+<p>just</p>
+<p>a</p>
+<p>ridiculous</p>
+<p>mess.</p>
+<p>That </p>
+<p>is</p>
+<p>why</p>
+<p>posts</p>
+<p>will</p>
+<p>be</p>
+<p>displayed</p>
+<p>on</p>
+<p>the</p>
+<p>main</p>
+<p>page</p>
+<p>truncated</p>
+<p>to</p>
+<p>a</p>
+<p>specific</p>
+<p>number</p>
+<p>of</p>
+<p>lines</p>
+<p>and</p>
+<p>you</p>
+<p>will</p>
+<p>just</p>
+<p>have</p>
+<p>to</p>
+<p>click</p>
+<p>the</p>
+<p>title</p>
+<p>to</p>
+<p>view</p>
+<p>the</p>
+<p>entire</p>
+<p>post.</p>
 
 
 </div><!-- /.blog-post -->
