--- a/blog.html
+++ b/blog.html
@@ -117,17 +117,81 @@
 			</h3>
 
 			<div class="blog-post">
+	<h2 class="blog-post-title"><a href="testing-a-long-blog-post.html"><font color=#FFFFFF>Testing a Long Blog Post</font></a></h2>
+	<p class="blog-post-meta">Tuesday, April 14, 2020</p>
+
+	<p>Just a long test post to test post truncation on the main blog page.</p>
+<p>If</p>
+<p>posts</p>
+<p>span</p>
+<p>too</p>
+<p>many</p>
+<p>lines</p>
+<p>that</p>
+<p>will</p>
+<p>make</p>
+<p>the</p>
+<p>main</p>
+<p>blog</p>
+<p>page</p>
+<p>very</p>
+<p>cluttered</p>
+<p>and</p>
+<p>just</p>
+<p>a</p>
+<p>ridiculous</p>
+<p>mess.</p>
+<p>That </p>
+<p>is</p>
+<p>why</p>
+<p>posts</p>
+<p>will</p>
+<p>be</p>
+<p>displayed</p>
+<p>on</p>
+<p>the</p>
+<p>main</p>
+<p>page</p>
+<p>truncated</p>
+<p>to</p>
+<p>a</p>
+<p>specific</p>
+<p>number</p>
+<p>of</p>
+<p>lines</p>
+<p>and</p>
+<p>you</p>
+<p>will</p>
+<p>just</p>
+<p>have</p>
+<p>to</p>
+<p>click</p>
+<p>the</p>
+<p>title</p>
+<p>to</p>
+<p>view</p>
+<p>the</p>
+<p>entire</p>
+<p>post.</p>
+
+
+</div><!-- /.blog-post -->
+<div class="blog-post">
 	<h2 class="blog-post-title"><a href="test-post-2.html"><font color=#FFFFFF>Test Post 2</font></a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
-	<p></p><p>This is another test blog post. </p><p></p><p>Testing.</p>
+	<p>This is another test blog post. </p>
+<p>Testing.</p>
+
 
 </div><!-- /.blog-post -->
 <div class="blog-post">
 	<h2 class="blog-post-title"><a href="test-post.html"><font color=#FFFFFF>Test Post</font></a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
-	<p></p><p>This is a test blog post. </p><p></p><p>https://i.imgur.com/AbvsrJA.png</p><p></p>
+	<p>This is a test blog post. </p>
+<p>https://i.imgur.com/AbvsrJA.png</p>
+
 
 </div><!-- /.blog-post -->
 
